@@ -1,3 +1,8 @@
+2007-10-05  Robert Millan  <rmh@aybabtu.com>
+
+	* loader/i386/pc/linux.c (grub_rescue_cmd_linux): Specify available
+	and required memory sizes in "too small lower memory" error.
+
 2007-10-03  Robert Millan  <rmh@aybabtu.com>
 
 	* include/grub/i386/io.h: New file.
